--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/traverse.css"> 
     <link rel="stylesheet" href="assets/css/popup.css">
     <link rel="shortcut icon" href="assets/img/helenaChibi.png" />
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/helenaChibi.png">
     <link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
     <title>Hogwarts</title>
 </head>
